# electricity-forecast-collector

./: .gitignore  handler.py  package-lock.json  package.json  pyproject.toml  serverless.yml
libs/constants/: area.py
libs/data/: forecast.py
libs/forecast_collector/: __init__.py  base.py  hokkaido.py  tokyo.py
libs/forecast_saver/: __init__.py  saver.py
tests/csv/: tokyo.csv
